Add dummy function to notebook

--- a/examples/dreambooth/test.ipynb
+++ b/examples/dreambooth/test.ipynb
@@ -9,10 +9,18 @@
    "source": [
     "import torch\n",
     "\n",
-    "from diffusers import StableDiffusionPipeline\n",
-    "\n",
-    "from helper import create_tests\n",
-    "from helper import dummy"
+    "from diffusers import StableDiffusionPipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08782163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dummy(images, **kwargs):\n",
+    "    return images, False"
    ]
   },
   {
